<resources>
    <string name="app_name">Logic Games</string>
    <string name="title">5 logic games that will train your brain</string>

    <string name="buttonTicTacToe">Tic tac toe</string>
    <string name="tic_tac_toe_rules">Tic-tac-toe is a game for two players, X and O, who take turns
        marking the spaces in a 3×3 grid. The player who succeeds in placing three of their marks in
        a horizontal, vertical, or diagonal row wins the game.  X always makes the first move. Press
        \"Lat\'s try\" and train with our mega smart computer</string>
    <string name="wins_nought">Nought Wins!</string>
    <string name="wins_cross">Cross Wins!</string>
    <string name="draw">Draw!</string>

    <string name="button_let_play">Let\'s try</string>


    <string name="button_make24">Make 24</string>
    <string name="twenty_four_rules">Create the number 24 using the numbers 1, 3, 4, and 6. You can
        add, subtract, multiply and divide. You can use parentheses too. You can only use each digit
        once. You cannot use exponents. You cannot do like this (14-6) x 3. Press \"Lat\'s try\"
        and try to solve this task on our emulator </string>
    <string name="twenty_four_result">Result:</string>
    <string name="nothing_input">You did not enter anything!</string>
    <string name="correct_answer">Your answer is correct!</string>
    <string name="incorrect_answer">Wrong! Carefully read the rules!</string>

    <string name="button_digits_game">Digits</string>
    <string name="digits_rules">This logic game is very simple. You just need to click on the
        buttons with numbers in ascending order. But you have to handle very quickly. Press \"Lat\'s try\"
        button and try to do this task in our emulator.</string>
    <string name="your_time">Your time: </string>

    <string name="button_barley_break">Barley-Break</string>
    <string name="barley_break_rules">The rules of this game are simple. It is necessary to build
        digits in sequence from 1 to 15 (sixteenth must be empty). But the game itself is
        complex. Press \"Lat\'s try\" and prove yourselves</string>


    <string name="button_puzzle">Puzzle</string>
    <string name="puzzle_rules">This game is very similar to Barley-Break. But here you have to assemble a
        picture and it very difficult. Press \"Lat\'s try\" and start training.</string>
    <string name="button_start">Start</string>

</resources>
