<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kitsyambochka.logicgames.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="24dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:gravity="center"
            android:id="@+id/textView" />

        <Button
            style="@style/Buttons"
            android:text="@string/buttonTicTacToe"
            android:id="@+id/buttonTicTacToe" />

        <Button
            style="@style/Buttons"
            android:text="@string/button_make24"
            android:id="@+id/buttonTwentyFour" />

        <Button
            style="@style/Buttons"
            android:text="@string/button_digits_game"
            android:id="@+id/buttonDigits" />

        <Button
            style="@style/Buttons"
            android:text="@string/button_barley_break"
            android:id="@+id/buttonBarleyBreak" />

        <Button
            style="@style/Buttons"
            android:text="@string/button_puzzle"
            android:id="@+id/buttonPuzzle" />
    </LinearLayout>
</ScrollView>
